# Llama-Pan-LATAM

./: .gitignore  GUI_POC.py  README.md  config.yaml  pyproject.toml  requirements.txt
app/: api_calls.py  utils.py
crawler/: requirements.txt
crawler/utils/: properties.py  samba.py
crawler/utils/config/: agents.yaml  tasks.yaml
crawler/utils/db/: chroma.sqlite3
crawler/utils/results/: results.md
db/: chroma.sqlite3
rag/: config.yaml  document_retrieval.py  rag_streamlit.py  vector_db.py
rag/complete-vector-db/2ad97e99-9f3d-4b4d-a33b-c7de49be2238/: index_metadata.pickle
rag/wrappers/: api_gateway.py
